# agentic-cpu-bench

./: .gitignore  Dockerfile  Dockerfile.live  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-03-agentic-cpu-bench-implementation.md
docs/superpowers/specs/: 2026-06-03-agentic-cpu-bench-design.md
fixtures/bug_repo/: Makefile  pyproject.toml
fixtures/bug_repo/cpp/: calc.cpp
fixtures/bug_repo/src/cpu_bench_demo/: __init__.py  text_stats.py
fixtures/bug_repo/tests/: test_text_stats.py
scripts/: build_cluster_image.sh  build_live_worker_image.sh  cluster_replay.sh  cluster_smoke.sh  create_codex_secret.sh  create_nvcr_pull_secret.sh  demo_full.sh  k8s_demo_live.sh  k8s_demo_replay.sh  k8s_fair_start_lib.sh  run_local_short.sh
src/agentic_cpu_bench/: artifacts.py  cli.py  codex_agent.py  command_runner.py  dashboard.py  events.py  k8s.py  live.py  live_dashboard.py  metrics.py  replay.py  report.py  task_model.py  workspace.py
tasks/python_cpp_bugfix/: expected.patch  manifest.json  prompt.md
tests/: test_artifacts.py  test_cli.py  test_codex_agent.py  test_command_runner.py  test_dashboard_report.py  test_events.py  test_k8s.py  test_live.py  test_live_dashboard.py  test_metrics.py  test_replay.py  test_task_model.py  test_workspace.py
