[project]
name = "agentic-cpu-bench"
version = "0.1.0"
description = "Race First agentic CPU bench for Grace/x86 demos with a future Vera target"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agentic-cpu-bench = "agentic_cpu_bench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py312"
